# qualidade_da_agua

./: .gitignore  pyproject.toml
configs/bronze/: ana_ponto_em_operacao.yaml
configs/data_quality/landing/: ana_ponto_em_operacao.yaml
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: ana_ponto_em_operacao_landing.yml
great_expectations/expectations/: .ge_store_backend_id  ana_ponto_em_operacao_landing.json
qualidade_da_agua/dags/: ana_ponto_em_operacao.py
qualidade_da_agua/jobs/: job_submitter.py
qualidade_da_agua/jobs/handlers/: batch_ingestion.py  runtime_check_data_quality.py  stream_ingestion.py
